Main view padding on header and footer collapse fix

--- a/src/webFileSharingSystem.Web/Client/src/app/app.component.scss
+++ b/src/webFileSharingSystem.Web/Client/src/app/app.component.scss
@@ -18,13 +18,21 @@ body {
   font-size: 1rem;
 }
 
+//Manual padding necessary due to ngIf on mainView elements
 .mainView {
   flex: 1;
-  padding: 48px 0 0; /* Height of navbar */
+  padding-top: 48px; /* Height of navbar */
+  padding-bottom: 40px /* Height of footer */
 }
 
 @media (max-width: 767.98px) {
   .mainViewCollapsed {
-    padding: 5.5rem 0 0; /* Height of navbar */
+    padding-top: 5.5rem; /* Height of navbar */
+  }
+}
+
+@media (max-width: 535px) {
+  .mainView {
+    padding-bottom: 64px /* Height of collapsed footer */
   }
 }
